--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -3,7 +3,6 @@
 {% block content %}
 <h1 class="mb-4">Your Expenses</h1>
 
-<!-- Filtering Form -->
 <form method="get" class="row g-3 mb-4">
   <div class="col-md-3">
     <input type="date" name="start_date" class="form-control" placeholder="Start Date" value="{{ request.args.get('start_date', '') }}">
@@ -12,18 +11,18 @@
     <input type="date" name="end_date" class="form-control" placeholder="End Date" value="{{ request.args.get('end_date', '') }}">
   </div>
   <div class="col-md-3">
-    <button type="submit" class="btn btn-primary">Filter</button>
+    <button type="submit" class="btn btn-lg btn-warning">Filter</button>
   </div>
 </form>
 
 <table class="table table-striped table-hover">
   <thead class="table-dark">
     <tr>
-      <th>Date</th>
-      <th>Description</th>
-      <th>Category</th>
-      <th>Amount</th>
-      <th>Actions</th>
+      <th style="width: 15%;">Date</th>
+      <th style="width: 35%;">Description</th>
+      <th style="width: 20%;">Category</th>
+      <th style="width: 15%;">Amount</th>
+      <th style="width: 15%;">Actions</th>
     </tr>
   </thead>
   <tbody>
