--- a/templates/edit_expense.html
+++ b/templates/edit_expense.html
@@ -21,7 +21,7 @@
         <label for="category" class="form-label">Category</label>
         <input type="text" name="category" id="category" class="form-control" value="{{ expense.category }}" required>
       </div>
-      <button type="submit" class="btn btn-primary">Update Expense</button>
+      <button type="submit" class="btn btn-success">Update Expense</button>
     </form>
   </div>
 </div>
